<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="@string/sample_pref_categ_1">
		<CheckBoxPreference android:key="enableSpeedTickerService"
							android:title="@string/sample_pref_ckb" 
							android:summary="@string/sample_pref_check_it" 
							android:defaultValue="false"/>		
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/sample_pref_categ_3" android:summary="Preference Summary">
						
		<ListPreference android:key="listOfSpeeds"
						android:title="@string/sample_pref_sel_dialog" 
						android:summary="@string/sample_pref_click_pop_up"
						android:entries="@array/numbers"
						android:entryValues="@array/numbers"
						android:dialogTitle="@string/sample_pref_choose_number" />
	</PreferenceCategory>
	
	
		<PreferenceCategory android:title="@string/speed_units_preferences" android:summary="Speed Units Preferences">
							
		<ListPreference android:key="listOfSpeedUnits"
						android:title="@string/sample_pref_sel_dialog_speed_unit" 
						android:summary="@string/sample_pref_click_pop_up"
						android:entries="@array/speedUnits"
						android:entryValues="@array/speedUnits"
						android:dialogTitle="@string/sample_pref_choose_speed_unit" />
	</PreferenceCategory>
	
</PreferenceScreen>